--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,7 @@
 # Auto detect text files and perform LF normalization
-* text=auto
+#* text=auto
+# Do not perform any LF normalization
+* -text
 
 # Custom for Visual Studio
 *.cs     diff=csharp
