Converted all files to Unix line endings
Converted all files from CRLF to Unix style LF line endings

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,8 @@
 # Auto detect text files and perform LF normalization
-#* text=auto
+* text=auto
+
 # Do not perform any LF normalization
-* -text
+#* -text
 
 # Custom for Visual Studio
 *.cs     diff=csharp
