Added list of files that must always have UNIX line endings

--- a/.gitattributes
+++ b/.gitattributes
@@ -2,7 +2,22 @@
 * text=auto
 
 # Do not perform any LF normalization
-#* -text
+* -text
+
+# Declare files that will always have CRLF line endings on checkout.
+*.asm  text eol=lf
+*.c    text eol=lf
+*.cpp  text eol=lf
+*.doc  text eol=lf
+*.h    text eol=lf
+*.htm  text eol=lf
+*.html text eol=lf
+*.inc  text eol=lf
+*.js   text eol=lf
+*.md   text eol=lf
+*.properties text eol=lf
+*.txt  text eol=lf
+*.xml  text eol=lf
 
 # Custom for Visual Studio
 *.cs     diff=csharp
